# pysigfd

./: .gitignore  .myenv  LICENSE  Makefile  README.md  README.rst  example.py  pypi.txt  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py  sigfd.py  tests.py  upload.sh
config/: project.py  python.py  version.py
examples/: basic.py
pysigfd/: pysigfd.py  static.py  version.py
signalfd/: common.py  constants.py  signalfd.py  sigset.py  tests.py
src/pysigfd/: pysigfd.py  static.py
tests/: tests.py
tests/unit_tests/: test_basic.py
