[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysigfd"
version = "1.3.7"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "linux signal file descriptor for python"
readme = "README.md"
license = "MIT"
keywords=[
    "signalfd",
    "python3",
    "linux",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cffi",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pysigfd"
"Bug Tracker" = "https://github.com/veltzer/pysigfd/issues"
"Documentation" = "https://veltzer.github.io/pysigfd"
"Download" = "https://pypi.org/project/pysigfd/"
"Repository" = "https://github.com/veltzer/pysigfd"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pysigfd"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pysigfd/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]
